--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,10 @@
       </div>
     </div>
   </nav>
-  <router-outlet></router-outlet>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  
 
 <hr>
   <footer class="container py-5">
