--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,12 @@
-<div>
-    <img src="https://avemob.com/wp-content/uploads/2017/09/decor-banner-1.jpg" alt="">
+<h1 class="text-center mx-auto">This is Products list.</h1>
+
+<div class="row">
+    <div class="card col-3" *ngFor='let product of products'>
+      <img [src]="product.image" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{product.name}}</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
 </div>
-<h1 class="text-center mx-auto">Hello there, this is homepage. </h1>
