--- a/src/app/update-product/update-product.component.html
+++ b/src/app/update-product/update-product.component.html
@@ -5,6 +5,13 @@
         <input type="text" class="form-control" name="name" [(ngModel)]="product.name">
       </div>
       <div class="form-group mx-2 my-3">
+        <label for="">Category: </label>
+        <select name="categoryId" class="form-control" [(ngModel)]="product.categoryId">
+          <option *ngIf='cate' value="{{cate.id}}" selected>{{cate.name}}</option>
+          <option value="{{category.id}}" *ngFor='let category of categories' >{{category.name}}</option>
+        </select>
+      </div>
+      <div class="form-group mx-2 my-3">
         <label for="">Description: </label>
         <input type="text" class="form-control" name="description" [(ngModel)]="product.description">
       </div>
@@ -14,12 +21,12 @@
       </div>
 
       <div class="form-group mx-2 my-3">
-        <label for="">Image: </label>
-        <input type="file" class="form-control" name="img" [(ngModel)]="product.img">
+        <label for="">Image URL: </label>
+        <input type="text" class="form-control" name="image" [(ngModel)]="product.image">
       </div>
   
       <div class="form-group mx-2 my-3">
-        <button (click)="handleUpdate()">update</button>
+        <button (click)="handleUpdate()" class="btn btn-success">Update</button>
       </div>
     </form>
 </div>
